<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_housesimple"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_purchase"
        android:icon="@drawable/ic_listmagnifyingglass"
        android:title="@string/nav_purchase" />
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@drawable/ic_heartstraight"
        android:title="@string/nav_wishlist" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_bagsimple"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/nav_profile" />
</menu>
